GoNoGo/force-app/main/default/objects/Go_No_Go_Question_Bank__c/Go_No_Go_Question_Bank__c.object-meta.xml
<CustomObject>
    <description>These records store actual questions which are going to be displayed on the Go/No-Go screen.</description>
    <label>Go/No-Go Question</label>
    <nameField>
        <displayFormat>GNGQB-{0000}</displayFormat>
        <label>Go/No-Go Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Go/No-Go Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>