GoNoGo/force-app/main/default/objects/Go_No_Go_Question_Bank__c/fields/Make_Required__c.field-meta.xml
<CustomField>
    <fullName>Make_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To make question required on UI.</description>
    <label>Make Required</label>
    <type>Checkbox</type>
</CustomField>