GoNoGo/force-app/main/default/objects/Go_No_Go_Question_Bank__c/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <inlineHelpText>This is the maximum score that can be achieved by this question. It contributes towards the Configuration&apos;s total max score.</inlineHelpText>
    <label>Max Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>