GoNoGo/force-app/main/default/objects/Go_No_Go_Question_Bank__c/fields/Max_Score_Entered__c.field-meta.xml
<CustomField>
    <fullName>Max_Score_Entered__c</fullName>
    <label>Max Score Entered</label>
    <summarizedField>Go_No_Go_Question_Bank_Scoring__c.Score__c</summarizedField>
    <summaryForeignKey>Go_No_Go_Question_Bank_Scoring__c.Go_No_Go_Question_Bank__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>