GoNoGo/force-app/main/default/objects/Go_No_Go_Question_Bank__c/fields/Question_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Question_Sequence__c</fullName>
    <description>Sequence number of the question on section in Go/No-Go screen.</description>
    <label>Question Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>