GoNoGo/force-app/main/default/objects/Go_No_Go_Question_Bank__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question_Label__c</columns>
    <columns>Max_Score__c</columns>
    <columns>Question_Sequence__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Make_Required__c</columns>
    <columns>Go_No_Go_Section__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>