GoNoGo/force-app/main/default/objects/Go_No_Go_Question_Bank__c/listViews/All_Questions.listView-meta.xml
<ListView>
    <fullName>All_Questions</fullName>
    <columns>NAME</columns>
    <columns>Question_Label__c</columns>
    <columns>Max_Score__c</columns>
    <columns>Question_Sequence__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Go_No_Go_Section__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Questions</label>
</ListView>